Add annotated handlers, message segments and command matching
Handler discovery goes through ServiceLoader behind a no-method marker interface, with an
optional processor generating the manifest, because a runtime classpath scan is not something a
nested-classloader or shaded runtime can be trusted with; the reflection path still works with no
processor configured at all. Binding mistakes and uninstantiable handler classes now fail at
registration and at compile time respectively, rather than as a missing handler on the first event.

MessageSegments reads text, mentions, attachments, cards and nested elements as the sibling fields
the payload actually has, so no API surface pretends a media file has a position inside the text;
MessageBuilder lowers one body onto the fields each scene really accepts instead of letting the
platform reject the request. Command matching is layered on those events, with group role bits that
stay inert where the platform reports no role.